--- a/Firebase_Chat/app/src/main/res/layout/activity_sign_up.xml
+++ b/Firebase_Chat/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SignInUp">
+    tools:context=".SignUp">
 
     <ImageView
         android:id="@+id/imageView"
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="0dp"
         android:background="@drawable/firebase" />
 
     <LinearLayout
@@ -21,27 +21,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/imageView"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="13dp"
         android:orientation="vertical"
         android:padding="15dp">
 
         <EditText
-            android:id="@+id/editTextPhone"
+            android:id="@+id/editTextFullName_SignUp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Enter full name"
+            android:inputType="text" />
+
+        <EditText
+            android:id="@+id/editTextPhone_SignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:digits="+0123456789"
             android:ems="10"
-            android:hint="Enter phone"
+            android:hint="Enter phone number"
             android:inputType="phone" />
 
+
         <Button
-            android:id="@+id/buttonGetVerificationCode"
+            android:id="@+id/buttonGetVerificationCode_SignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Get Verification Code"
             android:textAllCaps="false" />
 
         <EditText
-            android:id="@+id/editTextCode"
+            android:id="@+id/editTextCode_SignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:digits="0123456789"
@@ -49,10 +61,10 @@
             android:inputType="number" />
 
         <Button
-            android:id="@+id/buttonSignIn"
+            android:id="@+id/buttonRegister_SignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign In" />
+            android:text="Register Account" />
     </LinearLayout>
 
 </RelativeLayout>
